public/app.css
:root {
  --carousel-max-width: 1050px;
  --carousel-indicator-gap: 4px;
  --carousel-indicator-box-size: 14px;
  --carousel-indicator-dot-size: 7.5px;
  --progress-counter-font-size: 0.9em;
  --max-carousel-indicators-per-line: 30;
  --body-background-color: rgba(248, 244, 253, 1);
  --page-title-border-min-width: 40px;
  --line-height: 1.8rem;
  
  /*********************************/
  /* resetScreenWidthDependentVars */
  /*********************************/
  --top-menu-font-size: 1em;
  --top-menu-position: fixed;
  --rem-font-size: 16px;
  --inhalts-arrows-display: none;
  --top-menu-padding-x: 2rem;
  --top-menu-padding-y: 1.4rem;
  --top-menu-background-color: #0000;
  --top-menu-element-gap: 0.55rem;
  --bottom-menu-hr-display: "none";
  --bottom-menu-hr-margin-top: 1.6rem;
  --bottom-menu-hr-margin-bottom: 1.4rem;
  --bottom-menu-display: none;
  --bottom-menu-position: absolute;
  --bottom-menu-padding-x: 0px;
  --bottom-menu-padding-y: 0px;
  --bottom-menu-left: 0px;
  --bottom-menu-margin: "";
  --index-header-title-font-size: 2.25rem;
  --index-header-title-line-height: 2.8rem;
  --index-header-subtitle-font-size: 1.5rem;
  --index-header-padding-top: 90px;
  --index-header-padding-bottom: 4rem;
  --index-toc-max-width: 580px;
  --index-toc-padding-bottom: 3rem;
  --index-toc-chapter-level-margin: 0.5em;
  --index-toc-subchapter-level-margin: 0.15em;
  --end-of-page-main-column-margin-bottom: 2.4rem;
  --end-of-page-well-margin-bottom: 0.2rem;
  --end-of-page-elt-margin-bottom: 0rem;
  --main-column-width: 1050px;
  --main-column-padding-x: 2rem;
  --main-column-to-well-margin: 1.8rem;
  --outer-well-width: 922px;
  --page-title-font-size: 2.25rem;
  --page-title-padding-top: 3.6rem;
  --topic-announcement-font-size: 1.75rem;
  --subtopic-announcement-font-size: 1.5rem;
  --well-margin-y: 2rem;
  --last-child-well-margin-bottom: 0.5rem;
  --well-padding-y: 2rem;
  --well-padding-x: 1.6rem;
  --ul-ol-margin-left: 2rem;
  --ul-ol-margin-right: 2rem;
  --nested-ul-ol-margin-left: 2rem;
  --nested-ul-ol-margin-right: 2rem;
  --textfigure-padding-x: 6rem;
  --math-block-max-width: 100vw;

  /********************************/
  /* light mode code block colors */
  /********************************/
  /* --pre-background-color: #fdf6e3; */
  --pre-background-color: #fdfdfd;
  --pre-border: 0.5px solid black;
  --pre-text: #506269;
  --terminal-prompt: #586e75;
  --terminal-prompt-content: #073642;
  --arbitrary-prompt: #268bd2;
  --arbitrary-prompt-reponse: #2aa198;
  --python-prompt-carets: rgb(254, 56, 234);
  --python-prompt-content: #657b83;
  --python-prompt-ok-response: #2aa198;
  --python-prompt-error-response: rgb(226, 66, 66);
  --listing-numbers: rgb(174, 174, 174);
  --xml-tag-endings: #b58900;
  --xml-tag-names: #b58900;
  --xml-attribute-keys: #f78080;
  --xml-attribute-values: #6c71c4;
  --xml-equals-sign: #913d3d;
  --elm-punctuation: #dc322f;
  --elm-defined-symbol: #268bd2;
  --elm-type: #b58900;
  --elm-variable: #657b83;
  --elm-keyword: #cb4b16;
  --elm-function: #2aa198;
  --elm-relation: #d33682;
  --elm-par: #b58900;

  /*******************************/
  /* dark mode code block colors */
  /*******************************/
  /*
  --pre-background-color: #000;
  --pre-text: #fff;
  --terminal-prompt: rgb(219, 220, 218);
  --terminal-prompt-content: rgb(191, 241, 141);
  --arbitrary-prompt: rgb(120, 120, 255);
  --arbitrary-prompt-reponse: rgb(255, 173, 251);
  --python-prompt-carets: rgb(244, 154, 235);
  --python-prompt-content: rgb(255, 255, 255);
  --python-prompt-ok-response: rgb(48, 255, 120);
  --python-prompt-error-response: rgb(255, 142, 142);
  --listing-numbers: rgb(220, 220, 220);
  --xml-tag-endings: rgb(220, 200, 180);
  --xml-tag-names: rgb(220, 200, 180);
  --xml-attribute-keys: #f78080;
  --xml-attribute-values: #9a83e0;
  --xml-equals-sign: #913d3d;
  --elm-punctuation: #da7167ff;
  --elm-defined-symbol: #abb66fff;
  --elm-type: #cfa763ff;
  --elm-variable: #e6dab5ff;
  --elm-keyword: #da7167ff;
  --elm-function: #e6dab5ff;
  --elm-relation: #d58b58ff;
  --elm-par: #cfa763ff; */
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-family: 'Times New Roman', Times, serif;
  font-size: var(--rem-font-size);
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  -ms-text-size-adjust: none;
  text-size-adjust: none;
}

body {
  /* see also: https://codepen.io/chrislachance/pen/OJpmgrM */
  /* https://github.com/twbs/bootstrap/issues/34107 */
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  -ms-text-size-adjust: none;
  text-size-adjust: none;
  background-color: var(--body-background-color);
  font-size: 1.25rem;
  min-width: 2500px;
  color: #333;
  visibility: hidden;
}

#body-wrapper {
  position: relative;
  width: 100%;
  height: 100%;
}

.page-title {
  width: inherit;
  display: grid;
  grid-template-columns:
    minmax(var(--page-title-border-min-width), 1fr)
    auto minmax(var(--page-title-border-min-width), 1fr);
  align-items: center;
  text-align: center;
  gap: 2rem;
  font-size: var(--page-title-font-size);
  padding-top: var(--page-title-padding-top);
  margin-bottom: 1em;
}

.page-title p {
  line-height: 2.6rem;
}

.page-title::before,
.page-title::after {
  content: "";
  border-top: 6px double;
}

.page-title.no-borders::before,
.page-title.no-borders::after {
  content: none;
  border-top: none;
}

.main-column {
  max-width: var(--main-column-width);
  padding-left: var(--main-column-padding-x);
  padding-right: var(--main-column-padding-x);
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.well {
  width: 100%;
  margin: var(--well-margin-y) auto;
  padding: var(--well-padding-y) var(--well-padding-x);
  border-radius: 12px;
  overflow: visible;
}

.well.out {
  width: var(--outer-well-width);
}

.main-column + .well,
.well + .main-column {
  margin-top: var(--main-column-to-well-margin);
}
/* ... */

